add images to hero buttons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "app/herobutton.js"
   ],
   "exclude": [
     "node_modules"
